# larch

./: .gitignore  .pre-commit-config.yaml  README.md  indexing.py  metadata.py  processors.py  prompts.py  pyproject.toml  requirements-dev.txt  requirements-extras.txt  schema.py  setup.py  structures.py  tox.ini  utils.py
.github/workflows/: larch_to_s3.yml
larch/: __init__.py  __version__.py  _base.py  indexing.py  processors.py  schema.py  structures.py  utils.py
larch/indexing/: __init__.py  _base.py  indexers.py  paperqa.py  sinequa.py
larch/metadata/: README.md  __init__.py  evaluators.py  extractors.py  extractors_openai.py  validators.py
larch/paperqa_patched/: types.py
larch/retrievers/: __init.py  _base.py  sinequa.py
larch/search/: __init__.py  agents.py  chains.py  engines.py  template_matcher.py
larch/sql/: __init__.py  _base.py  executor.py  template_matcher.py
metadata/: __init__.py  _base.py  chunker.py  evaluators.py  extractors.py  validators.py
paperqa_patched/: docs.py  readers.py
search/: __init__.py  agents.py  engines.py
tests/: test_template_matcher.py
